exports[`App component renders correctly when the pathname does not match a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="clipped"
  desktopMinWidth={1025}
  drawerTransitionDuration={300}
  extractMini={true}
  header={<div />}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "component": "a",
        "key": "all",
        "leftIcon": <MdApps
          size={24} />,
        "primaryText": "All",
        "to": "/all",
      },
      Object {
        "component": "a",
        "key": "inbox",
        "leftIcon": <MdInbox
          size={24} />,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": "a",
        "key": "projects",
        "leftIcon": <MdAssignment
          size={24} />,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": "a",
        "key": "tags",
        "leftIcon": <MdLabel
          size={24} />,
        "primaryText": "Tags",
        "to": "/tags",
      },
      Object {
        "component": "a",
        "key": "account",
        "leftIcon": <MdPerson
          size={24} />,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="clipped"
  tabletMinWidth={768}
  temporaryIconChildren={<MdMenu />}
  toolbarActions={
    Array [
      <ButtonTooltipedInked
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}>
        <MdSync />
    </ButtonTooltipedInked>,
    ]
  }
  toolbarThemeType="colored"
  toolbarTitleMenu={
    <SelectField
      defaultValue=""
      iconChildren={
        <MdArrowDropDown
          size={24} />
      }
      id="items-to-show-selection"
      itemLabel="label"
      itemValue="value"
      keyboardMatchingTimeout={1000}
      lineDirection="left"
      menuItems={
        Array [
          "All",
          "Not Completed",
          "Completed",
        ]
      }
      position="tl"
      stretchList={true} />
  }
  transitionEnterTimeout={300}
  transitionName="md-cross-fade">
  <Switch>
    <Route
      component={[Function]}
      path="/all" />
    <Route
      component={[Function]}
      path="/inbox" />
    <Route
      component={[Function]}
      path="/projects" />
    <Redirect
      from="/project/inbox"
      push={false}
      to="/inbox" />
    <Redirect
      from="/project/root"
      push={false}
      to="/projects" />
    <Route
      component={[Function]}
      path="/project/:projectId" />
    <Route
      component={[Function]}
      path="/tags" />
    <Route
      component={[Function]}
      path="/tag/:tag" />
    <Route
      component={[Function]}
      path="/login" />
    <Route
      component={[Function]}
      path="/account" />
    <Redirect
      from="/"
      push={false}
      to="/inbox" />
  </Switch>
  <SnackbarContainer
    autohide={true}
    autohideTimeout={3000}
    toasts={Array []}
    transitionEnterTimeout={300}
    transitionLeaveTimeout={300}
    transitionName="md-snackbar" />
  <Connect(Component) />
  <Connect(Component) />
</NavigationDrawer>
`;

exports[`App component renders correctly when the pathname matches a route 1`] = `
<NavigationDrawer
  autoclose={true}
  contentComponent="main"
  contentId="main-content"
  defaultMedia="mobile"
  desktopDrawerType="clipped"
  desktopMinWidth={1025}
  drawerTransitionDuration={300}
  extractMini={true}
  header={<div />}
  includeDrawerHeader={true}
  jumpLabel="Jump to content"
  mobileDrawerType="temporary"
  mobileMinWidth={320}
  navItems={
    Array [
      Object {
        "component": "a",
        "key": "all",
        "leftIcon": <MdApps
          size={24} />,
        "primaryText": "All",
        "to": "/all",
      },
      Object {
        "active": true,
        "component": "a",
        "key": "inbox",
        "leftIcon": <MdInbox
          size={24} />,
        "primaryText": "Inbox",
        "to": "/inbox",
      },
      Object {
        "component": "a",
        "key": "projects",
        "leftIcon": <MdAssignment
          size={24} />,
        "primaryText": "Projects",
        "to": "/projects",
      },
      Object {
        "component": "a",
        "key": "tags",
        "leftIcon": <MdLabel
          size={24} />,
        "primaryText": "Tags",
        "to": "/tags",
      },
      Object {
        "component": "a",
        "key": "account",
        "leftIcon": <MdPerson
          size={24} />,
        "primaryText": "Account",
        "to": "/account",
      },
    ]
  }
  persistentIconChildren="arrow_back"
  position="left"
  tabletDrawerType="clipped"
  tabletMinWidth={768}
  temporaryIconChildren={<MdMenu />}
  toolbarActions={
    Array [
      <ButtonTooltipedInked
        icon={true}
        inkTransitionEnterTimeout={450}
        inkTransitionLeaveTimeout={300}
        inkTransitionOverlap={150}>
        <MdSync />
    </ButtonTooltipedInked>,
    ]
  }
  toolbarThemeType="colored"
  toolbarTitleMenu={
    <SelectField
      defaultValue=""
      iconChildren={
        <MdArrowDropDown
          size={24} />
      }
      id="items-to-show-selection"
      itemLabel="label"
      itemValue="value"
      keyboardMatchingTimeout={1000}
      lineDirection="left"
      menuItems={
        Array [
          "All",
          "Not Completed",
          "Completed",
        ]
      }
      position="tl"
      stretchList={true} />
  }
  transitionEnterTimeout={300}
  transitionName="md-cross-fade">
  <Switch>
    <Route
      component={[Function]}
      path="/all" />
    <Route
      component={[Function]}
      path="/inbox" />
    <Route
      component={[Function]}
      path="/projects" />
    <Redirect
      from="/project/inbox"
      push={false}
      to="/inbox" />
    <Redirect
      from="/project/root"
      push={false}
      to="/projects" />
    <Route
      component={[Function]}
      path="/project/:projectId" />
    <Route
      component={[Function]}
      path="/tags" />
    <Route
      component={[Function]}
      path="/tag/:tag" />
    <Route
      component={[Function]}
      path="/login" />
    <Route
      component={[Function]}
      path="/account" />
    <Redirect
      from="/"
      push={false}
      to="/inbox" />
  </Switch>
  <SnackbarContainer
    autohide={true}
    autohideTimeout={3000}
    toasts={Array []}
    transitionEnterTimeout={300}
    transitionLeaveTimeout={300}
    transitionName="md-snackbar" />
  <Connect(Component) />
  <Connect(Component) />
</NavigationDrawer>
`;
